--- a/tempjs/index.html
+++ b/tempjs/index.html
@@ -13,14 +13,16 @@
 </head>
 <body>
     <div class="mainbox">
-        <div class="draggable">
-        </div>
+        <div id="draggable" class="draggable"></div>
 
         <div id="drophere" class="drophere"></div>
+    </div>
+    <div class="deck1" id="deck1">
+
     </div>
 </body>
 </html>
 <script>
-//list();
+
 draggable();
 </script>
