--- a/tempjs/index.html
+++ b/tempjs/index.html
@@ -17,55 +17,79 @@
 <div class="showbox">
 <div class="wrapper">
 <div class="container">
-    <img class="titleimg" src="img/konoha/konohaback.jpg" alt="">
-    <div ><img draggable="false" src="img/akatsuki/deidaraaka.webp" alt="img/akatsuki/background/deidaraback.webp"><h3>Deidara</h3></div>
-    <div ><img draggable="false" src="img/akatsuki/hidanaka.webp" alt="img/akatsuki/background/hidanback.jpg"><h3>Hidan</h3></div>
-    <div ><img draggable="false" src="img/akatsuki/itachiaka.jpg" alt="img/akatsuki/background/itachiback.webp"><h3>Itachi</h3></div>
-    <div><img draggable="false" src="img/akatsuki/kakuzuaka.png" alt="img/akatsuki/background/kakuzuback.jpg"><h3>Kakuzu</h3></div>
-    <div><img draggable="false" src="img/akatsuki/kisameaka.webp" alt="img/akatsuki/background/kisameback.webp"><h3>Kisame</h3></div>
-    <div><img draggable="false" src="img/akatsuki/konanaka.jpg" alt="img/akatsuki/background/konanback.webp"><h3>Konan</h3></div>
-    <div><img draggable="false" src="img/akatsuki/painaka.jpg" alt="img/akatsuki/background/painback.jpg"><h3>Pain</h3></div>
-    <div><img draggable="false" src="img/akatsuki/sasoriaka.webp" alt="img/akatsuki/background/sasoriback.jpg"><h3>Sasori</h3></div>
-    <div><img draggable="false" src="img/akatsuki/tobiaka.webp" alt="img/akatsuki/background/tobiback.jpg"><h3>Tobi</h3></div>
+<img class="titleimg" src="img/konoha/konohaback.jpg" name="" alt="img/konoha/konohaback.jpg">
+<div ><img draggable="false" src="img/konoha/naruto.jpg" name="Naruto" alt="img/konoha/naruto.jpg"><h3></h3></div>
+<div ><img draggable="false" src="img/konoha/sasuke.jpg" name="Sasuke" alt="img/konoha/sasuke.jpg"><h3></h3></div>
+<div ><img draggable="false" src="img/konoha/sakura.webp" name="Sakura" alt="img/konoha/sakura.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/sai.webp" name="Sai" alt="img/konoha/sai.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/kakashi.webp" name="kakashi" alt="img/konoha/kakashi.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/shikam.jpg" name="Shikamaru" alt="img/konoha/shikam.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/ino.jpg" name="Ino" alt="img/konoha/ino.jpg"></div>
+<div><img draggable="false" src="img/konoha/choji.webp" name="Choji" alt="img/konoha/choji.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/asuma.webp" name="Asuma" alt="img/konoha/asuma.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/hinata.webp" name="Hinata" alt="img/konoha/hinata.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/shino.jpg" name="Shino" alt="img/konoha/shino.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/kiba.webp" name="Kiba" alt="img/konoha/kiba.webp"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/hashirama.avif" name="Hashirama" alt="img/konoha/hashirama.avif"><h3></h3></div>
+
+<div><img draggable="false" src="img/konoha/minato.jpg" name="Minato" alt="img/konoha/minato.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/tobirama.avif" name="Tobirama" alt="img/konoha/tobirama.avif"><h3></h3></div>
+<div><img draggable="false" src="img/konoha/tsunade.webp" name="Tsunade" alt="img/konoha/tsunade.webp"><h3></h3></div>
+
 </div>
 <div class="container">
-<img class="titleimg" src="img/akatsuki/background/aka2.jpg" alt="">
-<div><img draggable="false" src="img/akatsuki/deidaraaka.webp" alt="img/akatsuki/background/deidaraback.webp"><h3>Deidara</h3></div>
-<div><img draggable="false" src="img/akatsuki/hidanaka.webp" alt="img/akatsuki/background/hidanback.jpg"><h3>Hidan</h3></div>
-<div><img draggable="false" src="img/akatsuki/itachiaka.jpg" alt="img/akatsuki/background/itachiback.webp"><h3>Itachi</h3></div>
-<div><img draggable="false" src="img/akatsuki/kakuzuaka.png" alt="img/akatsuki/background/kakuzuback.jpg"><h3>Kakuzu</h3></div>
-<div><img draggable="false" src="img/akatsuki/kisameaka.webp" alt="img/akatsuki/background/kisameback.webp"><h3>Kisame</h3></div>
-<div><img draggable="false" src="img/akatsuki/konanaka.jpg" alt="img/akatsuki/background/konanback.webp"><h3>Konan</h3></div>
-<div><img draggable="false" src="img/akatsuki/painaka.jpg" alt="img/akatsuki/background/painback.jpg"><h3>Pain</h3></div>
-<div><img draggable="false" src="img/akatsuki/sasoriaka.webp" alt="img/akatsuki/background/sasoriback.jpg"><h3>Sasori</h3></div>
-<div><img draggable="false" src="img/akatsuki/tobiaka.webp" alt="img/akatsuki/background/tobiback.jpg"><h3>Tobi</h3></div>
-<div><img  draggable="false" src="img/akatsuki/zetsuaka.jpg" alt="img/akatsuki/background/zetsuback.jpg"><h3>Zetsu</h3></div>
+<img class="titleimg" src="img/akatsuki/background/aka2.jpg" name="" alt="img/akatsuki/background/aka2.jpg">
+<div><img draggable="false" src="img/akatsuki/deidaraaka.webp" name="Deidara" alt="img/akatsuki/background/deidaraback.webp"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/hidanaka.webp" name="Hidan" alt="img/akatsuki/background/hidanback.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/itachiaka.jpg" name="Itachi" alt="img/akatsuki/background/itachiback.webp"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/kakuzuaka.png" name="Kakuzu" alt="img/akatsuki/background/kakuzuback.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/kisameaka.webp" name="Kisame" alt="img/akatsuki/background/kisameback.webp"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/konanaka.jpg" name="Konan" alt="img/akatsuki/background/konanback.webp"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/painaka.jpg" name="Pain" alt="img/akatsuki/background/painback.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/sasoriaka.webp" name="Sasori" alt="img/akatsuki/background/sasoriback.jpg"><h3></h3></div>
+<div><img draggable="false" src="img/akatsuki/tobiaka.webp" name="Tobi" alt="img/akatsuki/background/tobiback.jpg"><h3></h3></div>
+<div><img  draggable="false" src="img/akatsuki/zetsuaka.jpg" name="Zetsu" alt="img/akatsuki/background/zetsuback.jpg"><h3></h3></div>
 </div>
 </div>
 
-</div>
+<div class="footer"><h3></h3></div>
+
 </div>
 </body>
 </html>
 <script>
-    $(document).ready(function(){
-        document.getElementById('mainbox').style.background = "url('img/akatsuki/background/akatsuki.jpg')";
-    })
-    $('.container div').on('click',function(){
+$(document).ready(function(){
+document.getElementById('mainbox').style.background = "#657AAB";
+})
+$('.titleimg').on('click',function(){
+    let el = this;
+    setTimeout(() => {
+        $(el).hide();
+    }, 0);
+    $('.container div').removeClass('shown');
+    $('.container h3').hide();
+    $('.titleimg').show();
+let backG = $(el).attr("alt",)
+let bodyG = document.getElementById('mainbox');
+let backG1 = bodyG.style.background = "url("+backG+")";
+})
+$('.container div img').on('click',function(){
+let el  = this;
+let title = $(el).attr('name');
+$('.footer h3').html(title);
+})
+$('.container div').on('click',function(){
 
 $('.container div').removeClass('shown');
 $('.container h3').hide();
 setTimeout(() => {
-$(this).addClass('shown');
-
-    $('.shown h3').show();
-
-
-$('.showbox>img').remove();
+$(this).not('.titleimg').addClass('shown');
+$('.shown h3').show();
 let backG = $('.shown img').attr("alt",)
 let bodyG = document.getElementById('mainbox');
 let backG1 = bodyG.style.background = "url("+backG+")";
 }, 0);
+
 })
 
 </script> 
