--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
 <title>J.Amorim Portfolio</title>
 </head>
 <body>
-
 <div class="container">
 <div class="header">
 <h1>José Amorim</h1>
 </div>
 <div class="list">
 <ol>
-<li data-id="tempjs/index.html"                  " id="frontend">FRONT-END           
+<li data-id="tempjs/index.html" id="frontend">
+<div class="home-li-container">
+<div class="home-title">FRONT-END </div>           
 <div state="hidden" class="img">  
 <div><img src="img/html.png" alt=""> </div> 
 <div><img src="img/css.png" alt="">  </div>
 <div><img src="img/jquery.webp" alt="">  </div>
 </div>
+</div> 
 </li>
-
-<li data-id="poket/index.php"                    " id="chatapi">CHAT API            
+<li data-id="poket/index.php" id="chatapi">
+<div class="home-li-container">
+<div class="home-title">CHAT API</div>    
 <div state="hidden" class="img">  
 <img src="img/html.png" alt="">  
 <img src="img/css.png" alt="">  
@@ -31,9 +34,11 @@
 <img src="img/php.png" alt="">  
 <img src="img/sql.png" alt="">  
 </div>
+</div>
 </li>
-
-<li data-id="ftpserver/index.php"                " id="ftpapi">FTP-API             
+<li data-id="ftpserver/index.php" id="ftpapi">
+<div class="home-li-container">
+<div class="home-title">FTP-API</div>
 <div state="hidden" class="img"> 
 <img src="img/html.png" alt="">  
 <img src="img/css.png" alt="">  
@@ -41,9 +46,13 @@
 <img src="img/php.png" alt="">  
 <img src="img/sql.png" alt="">  
 </div>
+</div>               
 </li>
-
-<li data-id="e-commerce/index.php"               " id="ecommwebapp">E-COMMERCE WEB-APP  
+<li data-id="e-commerce/index.php" id="ecommwebapp">
+<div class="home-li-container">
+<div class="home-title">
+E-COMMERCE WEB-APP  
+</div class="home-title">
 <div state="hidden" class="img">  
 <img src="img/html.png" alt="">  
 <img src="img/css.png" alt="">  
@@ -51,9 +60,13 @@
 <img src="img/php.png" alt="">  
 <img src="img/sql.png" alt="">  
 </div>
+</div> 
 </li>
-
-<li data-id="alphaFeatures/db/index.php"         " id="dbapi">DATABASE-API        
+<li data-id="alphaFeatures/db/index.php" id="dbapi">
+<div class="home-li-container">
+<div class="home-title">
+DATABASE-API 
+</div>
 <div state="hidden" class="img"> 
 <img src="img/html.png" alt="">  
 <img src="img/css.png" alt="">  
@@ -61,9 +74,13 @@
 <img src="img/php.png" alt="">  
 <img src="img/sql.png" alt="">  
 </div>
+</div>
 </li>
-
-<li data-id="alphaFeatures/sistemasmeca/index.php" id="taskmanager">TASK MANAGER        
+<li data-id="alphaFeatures/sistemasmeca/index.php" id="taskmanager">
+<div class="home-li-container">
+<div class="home-title">
+TASK MANAGER 
+</div>
 <div state="hidden" class="img"> 
 <img src="img/html.png" alt="">  
 <img src="img/css.png" alt="">  
@@ -71,23 +88,21 @@
 <img src="img/php.png" alt="">  
 <img src="img/sql.png" alt="">  
 </div>
+</div>
 </li>
-
 </ol>
 </div>
-
 </div>
-
 </body>
 </html>
-<script>/*$
+<script>
 $(document).ready(function(){
 $('.container li').on('click',function(){
 let el = this;
 let route = $(this).data('id');
 $(location).prop('href',route);
 })
-
+/*
 $('.img').css('display','none');
 
 $('.list li').hover(function(){
@@ -131,9 +146,9 @@ let img = $(el).append('<img src="img/jquery.webp">');
 })
 
 
-
+*/
 //END OF DOCUMENT
-})*/
+})
 </script>
 <style>
 :root
@@ -149,79 +164,116 @@ padding:0;
 margin:0;
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+body{
+background-color: var(--greenlight4);
+}
 @keyframes show {
 100%
 {display:flex}
-
 }
-.list li:hover .img ,.list li:hover .img img
+.container
+{
+width: 100%;
+display:flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+.header
+{
+top:0;
+position: sticky;
+background-color:var(--green3) ;
+box-shadow: 0 0 20px 5px var(--green3);
+width: 100%;
+text-align: center;
+transition: 0.6s;
+height: 50px;
+display: flex;
+justify-content: center;align-items: center;
+}
+.header:hover
+{
+cursor: pointer;
+transition: 0.6s;
+z-index:1;
+height: 200px;
+}
+.header:hover h1
+{
+background:linear-gradient(to right, var(--greendark1),var(--greendark1));
+background-repeat: repeat;
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.header h1
+{
+background:linear-gradient(to right, var(--green3), var(--greendark2));
+background-repeat: repeat;
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+transition: 0.6s;
+}
+.list
+{
+display:flex;
+flex-direction: column;
+align-items: center;
+width: 100%;
+}
+.list ol
+{
+width: 100%;
+}
+.list li{
+transition:1s;
+height:50px;
+text-align: left;
+display:flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+border-radius:5px;
+margin-top:40px;
+}
+.list li:hover
+{
+height:100px;
+transition:.5s;
+box-shadow: 0 0 25px 5px  var(--green2), inset 0px 100px var(--green3);
+}
+.home-li-container
+{
+width: 70%;
+display:flex;
+flex-direction: column;
+align-items: center;
+}
+.list li:hover .img ,.list li:hover .img
 {
 opacity: 1;
 transition: 0.5s;
-margin-left:10px;
+justify-content: space-around;
+width: 100%;
+}
+.home-title
+{
+margin-bottom:20px;
 }
 .img
 {
 transition: 0.5s;
 opacity: 0;
 display:flex;
-justify-content: space-evenly;
 align-items: center;
+justify-content: space-around;
+width: 50%;
 }
 .img img
 {
-transition: 0.5s;
 height: 40px;
 width:auto;
-display:flex;
-margin-left:-30px;
-}
-.container
-{
-width: 100%;
-height: 100vh;
-display:flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: var(--greenlight4);
-}
-.header
-{
-position: fixed;
-top:0;
-}
-.list
-{
-display:flex;
-flex-direction: column;
-align-items: flex-start;
-width: 100%;
-}
-.list ol
-{
-margin:30px;
-width: 90%;
-max-width: 800px;
-}
-
-li:hover
-{
-transition:1.5s;
-box-shadow: 0 0 25px 5px  var(--green2), inset 800px 0 var(--green3);
-
-}
-
-.list li{
-transition:1s;
-height:20px;
-padding:15px;
-text-align: left;
-display:flex;
-justify-content: space-between;
-align-items: center;
-cursor: pointer;
-border-radius:15px;
-margin-top:20px;
 }
 </style>
